--- a/style.css
+++ b/style.css
@@ -69,6 +69,62 @@ p {
   font-size: 18px;
 }
 
+.aoh-btn-solid {
+  font-family: var(--heading-font);
+  text-transform: uppercase;
+  background: var(--main-darkblue);
+  border: none;
+  color: var(--main-white);
+  padding: 5px 20px;
+}
+
+.aoh-btn-outline {
+  font-family: var(--heading-font);
+  text-transform: uppercase;
+  background: none;
+  border: 1px solid var(--main-white);
+  color: var(--main-white);
+  padding: 5px 20px;
+}
+
 .aoh-navbar {
   background-color: rgba(0,0,0,0.13);
+}
+
+.nav-link {
+  font-family: var(--heading-font);
+  text-transform: uppercase;
+}
+
+.aoh-hero {
+  background-image: url("./mockup-assets/aoh-hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 80vh;
+}
+
+.aoh-jumbotron {
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.25) 46%, rgba(0,0,0,0.2) 78%, rgba(0,0,0,0) 100%);
+}
+
+.aoh-hero-cta {
+  /* margin: 12vh 0 0 7vw; */
+}
+
+.aoh-hero-heading {
+  font-family: var(--heading-font);
+  font-size: 48px;
+  color: var(--main-white);
+}
+
+.aoh-hero-preamble {
+  font-family: var(--heading-font);
+  font-size: 35px;
+  color: var(--main-white);
+}
+
+.aoh-navbar-nav {
+  margin-right: 50px;
 }
