--- a/style.css
+++ b/style.css
@@ -174,6 +174,22 @@ a[href^="tel"] {
   list-style-type: none;
 }
 
+.aoh-checklist {
+  max-height: 500px;
+  line-height: 1.5rem;
+}
+
+.aoh-listitem-checked::after {
+  margin-left: 5px;
+  color: green;
+  content: "\2713";
+  font-weight: bolder;
+}
+
+.aoh-listitem-unchecked {
+  text-decoration: line-through;
+}
+
 .aoh-footer {
   background-image: url("./mockup-assets/aoh-hero.png");
   background-repeat: no-repeat;
