--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a[href^="tel"] {
 }
 
 .aoh-hero {
-  background-image: url("./mockup-assets/aoh-hero.png");
+  /* background-image: url("./mockup-assets/aoh-hero.png"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
