--- a/style.css
+++ b/style.css
@@ -197,7 +197,22 @@ a[href^="tel"] {
 }
 
 .aoh-404-content {
-  min-height: 87vh;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.aoh-404-content div {
+  max-width: 30vw;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.aoh-404-inner {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
