--- a/assets/event.css
+++ b/assets/event.css
@@ -1,7 +1,3 @@
-.tribe-events-view{
-  /* background-color: red !important; */
-}
-
 .tribe-common--breakpoint-medium.tribe-events .tribe-events-header--has-event-search .tribe-events-header__events-bar{
   width: 30%;
 }
@@ -46,4 +42,57 @@
   /* background: transparent !important;
   content: none !important;
   border: none !important; */
+}
+
+.tribe-events-calendar-list__month-separator{
+  display: none !important;
+}
+
+.tribe-events-calendar-list__event-date-tag{
+  display: none !important;
+}
+
+.tribe-events-calendar-list__event-details{
+  width: 100% !important;
+  flex-direction: row !important;
+  font-family: "Work Sans", sans-serif !important;
+  font-size: 15px !important;
+}
+
+.tribe-common.tribe-events .tribe-events-calendar-list__event-description {
+  display: none !important;
+}
+
+h3.tribe-events-calendar-list__event-title a{
+  font-family: "Work Sans", sans-serif !important;
+  font-size: 15px !important;
+  color: black !important;
+  text-decoration: underline !important;
+  display: flex !important;
+  align-items: center !important;
+}
+
+.tribe-events-calendar-list__event-header{
+  display: grid !important;
+  grid: 1fr / 1fr 1fr 1fr;
+  gap: 20px !important;
+  justify-content: center !important;
+  align-items: center !important;
+  margin: 0 !important;
+}
+
+.tribe-common-g-row--gutters > .tribe-common-g-col{
+  display: flex !important;
+  /* flex-direction: row !important; */
+  justify-content: space-between !important;
+  align-items: center !important;
+  margin: 0 !important;
+}
+
+.tribe-events-calendar-list__event-header div, .tribe-events-calendar-list__event-header h3, .tribe-events-calendar-list__event-header address{
+  margin: 0 !important;
+}
+
+.tribe-events-calendar-list__event-cost{
+  margin: 0 !important;
 }
