--- a/style.css
+++ b/style.css
@@ -195,7 +195,24 @@ a[href^="tel"] {
 .aoh-footer {
   background-image: url("./mockup-assets/aoh-hero.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 200%;
+}
+
+#footer-widget-area > li {
+  display: flex;
+  justify-content: center;
+}
+
+#footer-widget-area > li > div{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#footer-widget-area > li > div > p {
+  padding: 0 15px;
+  color: var(--main-white);
+  margin: 0;
 }
 
 .aoh-404-content {
