--- a/assets/event.css
+++ b/assets/event.css
@@ -63,6 +63,18 @@
   display: none !important;
 }
 
+.tribe-events-calendar-list div{
+  margin: 3px !important;
+}
+
+.tribe-events-calendar-list__event-row:nth-of-type(2n+3){
+  background-color: var(--main-lightblue) !important;
+}
+
+.tribe-events-calendar-list__event-venue-address{
+  display: none !important;
+}
+
 h3.tribe-events-calendar-list__event-title a{
   font-family: "Work Sans", sans-serif !important;
   font-size: 15px !important;
@@ -70,15 +82,23 @@ h3.tribe-events-calendar-list__event-title a{
   text-decoration: underline !important;
   display: flex !important;
   align-items: center !important;
+  width: 100% !important;
+  box-sizing: border-box !important;
 }
 
 .tribe-events-calendar-list__event-header{
   display: grid !important;
-  grid: 1fr / 1fr 1fr 1fr;
+  grid: 1fr / 330px 1fr 1fr;
   gap: 20px !important;
   justify-content: center !important;
   align-items: center !important;
   margin: 0 !important;
+  width: 100% !important;
+  text-align: left !important;
+}
+
+.tribe-events-calendar-list__event-wrapper{
+  padding: 0 !important;
 }
 
 .tribe-common-g-row--gutters > .tribe-common-g-col{
@@ -95,4 +115,12 @@ h3.tribe-events-calendar-list__event-title a{
 
 .tribe-events-calendar-list__event-cost{
   margin: 0 !important;
+}
+
+.tribe-events-calendar-list-nav{
+  display: none !important;
+}
+
+.tribe-events .tribe-events-c-ical{
+  display: none !important;
 }
