--- a/assets/event.css
+++ b/assets/event.css
@@ -92,7 +92,7 @@ a.tribe-events-calendar-list__event-title-link{
 
 .tribe-events-calendar-list__event-header{
   display: grid !important;
-  grid: 1fr / 330px 1fr 1fr;
+  grid: 1fr / 200px 1fr 1fr;
   gap: 20px !important;
   justify-content: center !important;
   align-items: center !important;
@@ -128,6 +128,41 @@ a.tribe-events-calendar-list__event-title-link{
 .tribe-events .tribe-events-c-ical{
   display: none !important;
 }
+
+header.tribe-events-header--has-event-search{
+  flex-direction: row !important;
+}
+
+.tribe-events-c-events-bar__views{
+  display: none !important;
+}
+
+button.tribe-events-c-events-bar__search-button{
+  border: none !important;
+  background-color: white !important;
+  margin: 0 !important;
+}
+
+button.tribe-events-c-search__button{
+  text-transform: uppercase;
+  font-family: var(--heading-font);
+  border: 1px solid var(--main-darkblue);
+  color: var(--main-darkblue);
+  background-color: white;
+  transition: all .3s;
+}
+
+button.tribe-events-c-search__button:hover{
+  font-family: var(--heading-font);
+  border: 1px solid var(--main-darkblue);
+  color: white;
+  background-color: var(--main-darkblue);
+}
+
+#tribe-events-events-bar-keyword{
+  padding-left: 20px;
+}
+
 
 /* LATEST PAST EVENTS */
 
@@ -253,7 +288,14 @@ h2.tribe-events-calendar-latest-past__heading{
 /* SINGLE-EVENT */
 
 h1.tribe-events-single-event-title{
-  color: black;
+  font-family: var(--heading-font);
+  font-size: 70px;
+  color: var(--main-black);
+  font-weight: 600;
+  font-variant: small-caps;
+  text-transform: capitalize;
+  border-bottom: 1px lightgrey solid;
+  margin-bottom: 30px;
 }
 
 h2.tribe-events-single-section-title{
@@ -302,4 +344,39 @@ address span.tribe-delimiter{
 
 .tribe-events-back{
   margin: 20px 0 20px !important;
+}
+
+/* MEDIA QUERY LIST */
+
+@media screen and (max-width: 768px){
+  
+  div.tribe-events-c-small-cta{
+    display: none;
+  }
+  .tribe-events-calendar-list__event-header{
+    grid: 1fr / 150px 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 500px){
+  
+  .tribe-events-calendar-list__event-header{
+    grid: 1fr / 100px 1fr 1fr;
+  }
+
+  .tribe-events-calendar-list__event-header, .tribe-events-calendar-list__event-header a{
+    font-size: 13px !important;
+  }
+}
+
+@media screen and (max-width: 500px){
+  
+  .tribe-events-calendar-list__event-header{
+    grid: 1fr / 90px 1fr 1fr;
+    gap: 10px;
+  }
+
+  .tribe-events-calendar-list__event-header, .tribe-events-calendar-list__event-header a{
+    font-size: 13px !important;
+  }
 }
