--- a/assets/archive-hamn.css
+++ b/assets/archive-hamn.css
@@ -20,6 +20,12 @@ hr {
 .hamn-row {
     align-items: center !important;
 }
+.search-row:nth-child(2n){
+    background-color: var(--main-lightblue);
+}
+.search-link {
+    display: block;
+}
 
 .hamn-row a {
     font-family: "Work Sans", sans-serif !important;
@@ -31,6 +37,7 @@ hr {
 
 .hamn-row p {
     font-size: 14px;
+    margin-bottom: 0;
 }
 
 .dock-search-form {
@@ -42,7 +49,14 @@ hr {
     padding: 0.7rem 1rem;
     border: 1px #e4e4e4 solid;
 }
-
+.search-row p {
+    margin-bottom: 0;
+    font-size: 13px;
+}
+.search-row a {
+    font-weight: 500;
+    font-size: 15px !important;
+}
 .search-field:focus {
     outline: none;
 }
