--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
   font-family: var(--heading-font);
   font-size: 70px;
   color: var(--main-black);
-  font-weight: 600;
+  font-weight: 400;
   font-variant: small-caps;
   text-transform: capitalize;
 }
@@ -229,6 +229,7 @@ a[href^="tel"] {
   justify-content: center;
   align-items: center;
 }
+
 .aoh-404-content div {
   max-width: 30vw;
   display: inline-flex;
@@ -246,4 +247,11 @@ a[href^="tel"] {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.aoh-404-inner > div > img {
+  width: 300px;
+  height: 300px;
+}
+label.screen-reader-text {
+  display: none;
 }
