Lade till EN måsvinge som fattades i style.css
Lade till en måsvinge

--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ a[href^="tel"] {
 p.aoh-comments-title {
   background-color: lightblue;
   text-align: center;
+}
   
 .aoh-404-inner > div > img {
   width: 300px;
