--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ a[href^="tel"] {
   padding: 5px 20px;
 }
 
+.aoh-max-width-250px {
+  max-width: 250px;
+}
+
 .aoh-navbar {
   background-color: rgba(0, 0, 0, 0.13);
 }
