--- a/style.css
+++ b/style.css
@@ -38,9 +38,10 @@ h1 {
 
 h2 {
   font-family: var(--heading-font);
-  font-size: 60px;
+  font-size: 50px;
   color: var(--main-black);
   font-weight: 500;
+  padding-bottom: 20px;
 }
 
 h3 {
@@ -72,7 +73,7 @@ h6 {
 
 p {
   font-family: var(--text-font);
-  font-size: 18px;
+  font-size: 16px;
 }
 
 a[href^="tel"] {
