--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ a[href^="tel"] {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 .post-categories{
   list-style-type: none;
 }
@@ -109,7 +113,7 @@ a[href^="tel"] {
 
 .aoh-link-btn:hover {
   color: var(--main-white);
-  text-decoration: underline;
+  cursor: pointer;
 }
 
 .aoh-thumbnail-hamn {
