--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ a[href^="tel"] {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 .post-categories{
   list-style-type: none;
 }
@@ -105,6 +109,16 @@ a[href^="tel"] {
   border: 1px solid var(--main-white);
   color: var(--main-white);
   padding: 5px 20px;
+}
+
+.aoh-link-btn:hover {
+  color: var(--main-white);
+  cursor: pointer;
+}
+
+.aoh-thumbnail-hamn {
+  width: 300px;
+  height: 200px;
 }
 
 .aoh-max-width-250px {
