--- a/assets/event.css
+++ b/assets/event.css
@@ -405,6 +405,17 @@ address span.tribe-delimiter{
   .tribe-events-c-search__input-group{
     width: 100%;
   }
+  .tribe-events-c-search__button {
+    font-family: var(--heading-font) !important;
+    text-transform: uppercase !important;
+    background: var(--main-darkblue) !important;
+    border: none !important;
+    color: var(--main-white) !important;
+    padding: 5px 20px !important;
+    border-radius: 0 !important;
+    height: 3rem !important;
+    font-size: 18px !important;
+  }
 }
 
 @media screen and (max-width: 500px){
@@ -441,4 +452,7 @@ address span.tribe-delimiter{
 
 input.tribe-events-c-search__input  {
   font-family: "Work Sans" !important;
+  border: 1px solid lightgray !important;
+  min-width: 300px !important;
+  border-radius: 0 !important;
 }
