--- a/style.css
+++ b/style.css
@@ -163,7 +163,27 @@ button {
     rgba(0, 0, 0, 0) 100%
   );
 }
+@media screen and (min-width: 2000px){
+  .aoh-jumbotron h1 {
+    font-size: 72px;
+  }
+  .aoh-jumbotron {
+    height: 50vh;
+  }
 
+}
+@media screen and (max-width: 500px){
+  .aoh-jumbotron h1 {
+    font-size: 42px !important;
+  }
+  .aoh-hero-preamble {
+    font-size: 28px !important;
+  }
+  .aoh-jumbotron {
+    height: 70vh;
+  }
+
+}
 
 
 .aoh-hero-heading {
