--- a/style.css
+++ b/style.css
@@ -160,7 +160,11 @@ button {
   );
 }
 
-
+.carousel-item > img {
+  width: 100%;
+  max-height: 600px;
+  object-fit: cover;
+}
 
 .aoh-hero-heading {
   font-family: var(--heading-font);
