småfix på css hamnarkiv, eventarkiv, samt fixat rubrik och typografi på single hamn

--- a/assets/archive-hamn.css
+++ b/assets/archive-hamn.css
@@ -19,6 +19,7 @@ hr {
 
 .hamn-row {
     align-items: center !important;
+    padding: 12px 10px !important;
 }
 .search-row:nth-child(2n){
     background-color: var(--main-lightblue);
