--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h5 {
 
 h6 {
   font-family: var(--heading-font);
-  font-size: 24px;
+  font-size: 20px;
   color: var(--main-black);
   font-weight: 600;
 }
@@ -82,9 +82,18 @@ p {
   font-size: 16px;
 }
 
-a[href^="tel"] {
+a, a:hover, a[href^="tel"] {
   color: var(--main-white);
   text-decoration: none;
+  transition: all .3s;
+}
+
+a.aoh-btn-outline:hover{
+  background: var(--main-darkblue);
+}
+
+a.aoh-btn-solid:hover{
+  background: rgb(39, 78, 138);
 }
 
 button {
