--- a/style.css
+++ b/style.css
@@ -277,6 +277,9 @@ button {
   margin-top: -70px;
 }
 
+.footer-spacer {
+  height: 150px;
+}
 /* @media screen and (max-width: 990px){
   .aoh-footer{
     height: 90px
