--- a/style.css
+++ b/style.css
@@ -98,11 +98,37 @@ a.aoh-btn-outline:hover{
 }
 
 a.aoh-btn-solid:hover{
-  background: rgb(39, 78, 138);
+  background: var(--main-darkblue);
+  opacity: 1;
 }
 
 button {
   cursor: pointer;
+}
+.carousel-control-next, .carousel-control-prev {
+  opacity: 0.7 !important;
+
+}
+.carousel-control-next-icon, .carousel-control-prev-icon {
+
+  border-radius: 50%;
+  padding: 1rem;
+  background-size: 15px;
+  position: relative;
+}
+.carousel-control-next-icon:before, .carousel-control-prev-icon:before {
+  background-color: black;
+  display: block;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  z-index: -1;
+  opacity: 0.5;
+
 }
 
 .post-categories{
@@ -119,7 +145,8 @@ button {
   background: var(--main-darkblue);
   border: none;
   color: var(--main-white);
-  padding: 5px 20px;
+  padding: 8px 20px;
+  opacity: 0.8;
 }
 
 .aoh-btn-outline {
