Feature/eventlist widget (#48)
* init branch

* diverse småfix i css, bl.a. eventlist-widgeten samt herotext

Co-authored-by: David Larsson <davvelars@gmail.com>

--- a/style.css
+++ b/style.css
@@ -128,7 +128,6 @@ button {
   border-radius: 50%;
   z-index: -1;
   opacity: 0.5;
-
 }
 
 .post-categories{
@@ -186,7 +185,7 @@ button {
 .aoh-hero {
   /* background-image: url("./mockup-assets/aoh-hero.png"); */
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
 
 }
@@ -202,7 +201,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 40vh;
+  height: 50vh;
   background: rgb(0, 0, 0);
   background: linear-gradient(
     0deg,
@@ -250,8 +249,13 @@ button {
 
 .aoh-hero-preamble {
   font-family: var(--heading-font);
-  font-size: 35px;
+  font-size: 32px;
   color: var(--main-white);
+  font-weight: 300;
+}
+.aoh-hero-preamble-container {
+  display: flex !important;
+  flex-direction: row !important;
 }
 
 .aoh-navbar-nav {
@@ -441,4 +445,44 @@ div.wpforms-container-full .wpforms-form .wpforms-required-label{
   flex-direction: column;
   box-sizing: border-box;
   padding-left: 4rem;
+}
+
+
+/* Event widget style */
+
+.tribe-common .tribe-common-g-row {
+  flex-wrap: nowrap !important;
+}
+
+.tribe-events-widget-events-list__event-date-tag-datetime {
+  display: flex !important;
+  flex-direction: column !important;
+  height: 50px !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+  width: 70px !important;
+  margin-right: 1rem !important;
+}
+
+.tribe-events-widget-events-list__event-header {
+  display: flex !important;
+  flex-direction: column !important;
+  height: 52px !important;
+  justify-content: space-between !important;
+  padding: 3px !important;
+}
+
+.tribe-events-widget-events-list__event-date-tag-month {
+  text-transform: uppercase !important;
+}
+
+.tribe-events-widget-events-list__event-row {
+  margin: 20px 0 !important;
+}
+
+.tribe-common .tribe-common-g-col {
+  width: auto;
+}
+.tribe-events-widget-events-list__event-date-tag-daynum {
+  margin-top: -20px !important;
 }
